tests/jballerina-unit-test/src/test/resources/test-src/javainterop/negative/method_sig_not_match11.bal
import ballerina/java;

function returnStringForBUnionFromJava() returns int|float|string = @java:Method {
    'class:"org/ballerinalang/nativeimpl/jvm/tests/StaticMethods"
} external;

